--- a/WebApplication5/Views/Home/Decrypt.cshtml
+++ b/WebApplication5/Views/Home/Decrypt.cshtml
@@ -5,7 +5,7 @@
     string folderPath = Server.MapPath("~/Files");
     string[] filePaths = Directory.GetFiles(folderPath, "*.txt");
     List<string> CollectionFileNames = new List<string>();
-    for(int i =0; i < filePaths.Length; i++)
+    for (int i = 0; i < filePaths.Length; i++)
     {
         CollectionFileNames.Add(Path.GetFileName(filePaths[i]));
     }
@@ -15,13 +15,32 @@
 <h2>Decrypt</h2>
 
 
-<h3>Выберите файл для загрузки</h3>
+<h3>Выберите файл для загрузки на сервер и последующей расшифровки</h3>
 @using (Html.BeginForm("Upload", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <input type="file" name="upload" />
     <br>
     <input type="submit" value="Загрузить" />
+
+
 }
+<h3>------------------------------------------------------------------------------------------------------------</h3>
+<h3>Введите ключ:</h3>
+@using (Html.BeginForm("Decrypting", "Home", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    <div class="form-horizontal">
+        <!-- атрибут name такой же как в контроллере у метода параметр -->
+        <input type="text" name="parameterName" id="ls" />
+
+    </div>
+    <br>
+    <button type="submit" runat="server" id="btnLogin" >Расшифровать!</button>
+}
+
+<h3>------------------------------------------------------------------------------------------------------------</h3>
+
+<h3>Файл можно забрать ниже ↓</h3>
 
 
 <h3>Выберите файл для загрузки</h3>
@@ -30,48 +49,4 @@
 
     <input type="submit" value="скачать" />
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>DOWNLOAD</title>
-</head>
-<body>
-    <div>
-        <h1>Reading Data from a File</h1>
-
-        <button type=button
-                onclick="btnLogin_Click()">
-            dddddddd
-        </button>
-
-        <button type=button
-                onclick="Click_Download">
-            Show hint
-        </button>
-
-        
-        <h1>List of files</h1>
-        <ol>
-            @foreach (var el in CollectionFileNames)
-            {
-                <li>
-                    @el
-                </li>
-            }
-            
-            
-        </ol>
-        
-
-        <button type="submit" runat="server" id="btnLogin" onserverClick="btnLogin_Click">login </button>
-
-        <label>
-            <input type=checkbox name=club onchange="form.clubfields.disabled = !checked">
-            Use Club Card
-        </label>
-    </div>
-</body>
-</html>
 
