--- a/WebApplication5/Views/Home/About.cshtml
+++ b/WebApplication5/Views/Home/About.cshtml
@@ -31,6 +31,31 @@
 </head>
 <body>
     <div>
+
+        <form action="/Home/CategoryChosen" method="get">
+
+            <fieldset>
+                Movie Type <select id="MovieType" name="MovieType">
+
+                    <option value=""></option>
+
+                    <option value="0">Action</option>
+
+                    <option value="1">Drama</option>
+
+                    <option selected="selected" value="2">Comedy</option>
+
+                    <option value="3">Science Fiction</option>
+
+                </select>
+
+                <p><input type="submit" value="Submit" /> </p>
+
+            </fieldset>
+
+        </form>
+
+
         <h1>Reading Data from a File</h1>
 
         <button type=button
@@ -46,6 +71,8 @@
 
 
         <button type="submit" runat="server" id="btnLogin" onserverClick="btnLogin_Click">login </button>
+
+
 
     </div>
 </body>
