--- a/WebApplication5/Views/Home/Contact.cshtml
+++ b/WebApplication5/Views/Home/Contact.cshtml
@@ -6,7 +6,8 @@
     char[] delimiterChar = { ',' };
 
     var dataFile = Server.MapPath("~/Files/Result.txt");
-   
+
+
     if (File.Exists(dataFile))
     {
         userData = File.ReadAllLines(dataFile, System.Text.Encoding.GetEncoding("windows-1251"));
@@ -21,6 +22,10 @@
         // File does not exist.
         result = "The file does not exist.";
     }
+
+    var dir = new DirectoryInfo(Server.MapPath("~/Files/")); // папка с файлами
+    
+  
 }
 
 
@@ -33,35 +38,64 @@
     <input type="submit" value="Загрузить" />
 }
 
+
 <!DOCTYPE html>
 
 <html>
 <head>
     <title>Reading Data from a File</title>
+    <style>
+        .box1 {
+            background: #f0f0f0; /* Цвет фона */
+            width: 1140px; /* Ширина блока */
+            padding: 10px; /* Поля */
+            border: 2px solid #000; /* Параметры рамки */
+        }
+    </style>
 </head>
 <body>
     <div>
-        <h1>Reading Data from a File</h1>
 
-        
+        <form name="test" method="post" action="Refresh">
+
+            <p>
+                <input type="submit" value="Отправить">
+            </p>
+        </form>
+
+        <h3>Выберите файл из списка! </h3>
+
+
+        @Html.DropDownList("user", new SelectList(new string[] { "Tom", "Sam", "Bob", "Alice" }), "Выберите пользователя")
+
+        @Html.DropDownList(ViewData["Users"].ToString(), ViewBag.Users as SelectList)
+
+        <br></br>
+
+        <input type="submit" value="Выбрать" />
+
+        <br></br>
+
         @result
         @if (result == "")
         {
-            <ol>
-                @foreach (string dataLine in userData)
-                {
-                    <li>
-                        User
-                        <ul>
-                            @foreach (string dataItem in dataLine.Split(delimiterChar))
-                            {
-                                <li>@dataItem</li>
-                            }
-                        </ul>
-                    </li>
-                }
-            </ol>
+            <details>
+                <summary>Текст файла</summary>
+                <div class="box1">
+                    @foreach (string dataLine in userData)
+                    {
+
+                        foreach (string dataItem in dataLine.Split(delimiterChar))
+                        {
+                            @dataItem
+                        }
+
+
+                    }
+                </div>
+            </details>
         }
+
     </div>
 </body>
 </html>
