--- a/WebApplication5/Views/Home/Contact.cshtml
+++ b/WebApplication5/Views/Home/Contact.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     var result = "";
+    var choosefileName = "";
     Array userData = null;
+    Array userData1 = null;
 
 
     char[] delimiterChar = { ',' };
@@ -24,8 +26,30 @@
     }
 
     var dir = new DirectoryInfo(Server.MapPath("~/Files/")); // папка с файлами
-    
-  
+    Server.MapPath("~/Files/encrypt.txt");
+
+    var chooseFile = Server.MapPath("~/Files/encrypt.txt");
+
+
+    if (File.Exists(chooseFile))
+    {
+        userData1 = File.ReadAllLines(chooseFile, System.Text.Encoding.GetEncoding("windows-1251"));
+        if (userData1 == null)
+        {
+            // Empty file.
+            choosefileName = "The file is empty.";
+        }
+        else
+        {
+            choosefileName = "Файл выбран";
+        }
+    }
+    else
+    {
+        // File does not exist.
+        result = "The file does not exist.";
+    }
+
 }
 
 
@@ -38,6 +62,7 @@
     <input type="submit" value="Загрузить" />
 }
 
+<label name="1">Выбран файл: @choosefileName</label>
 
 <!DOCTYPE html>
 
@@ -69,14 +94,23 @@
 
 
 
+        <!--using (Html.BeginForm("CategoryChosen", "Home", FormMethod.Post))-->
+
         @using (Html.BeginForm("CategoryChosen", "Home", FormMethod.Post))
         {
             @Html.DropDownList(ViewData["Users"].ToString(), ViewBag.Users as SelectList)
-
-            <br></br>
-
-            <input type="submit" value="Выбрать" />
+            <br>
+            <input type="submit" name="lol" />
         }
+
+
+
+
+        <br></br>
+
+
+
+
         <!--Html.DropDownList(ViewData["Users"].ToString(), ViewBag.Users as SelectList)-->
 
         <br></br>
