--- a/WebApplication5/Views/Shared/_Layout.cshtml
+++ b/WebApplication5/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Связаться", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Зашифровать", "Crypt", "Home")</li>
                     <li>@Html.ActionLink("Дешифровать", "Decrypt", "Home")</li>
+                    <li>@Html.ActionLink("Зашифровать WORD", "CryptWORD", "Home")</li>
                 </ul>
                 </div>
             </div>
