--- a/WebApplication5/Views/Home/CryptWORD.cshtml
+++ b/WebApplication5/Views/Home/CryptWORD.cshtml
@@ -1,60 +1,39 @@
 ﻿
 @{
-    ViewBag.Title = "Decrypt";
-    List<string> files = new List<string>();
-    string folderPath = Server.MapPath("~/Files");
-    string[] filePaths = Directory.GetFiles(folderPath, "*.txt");
-    List<string> CollectionFileNames = new List<string>();
-    for (int i = 0; i < filePaths.Length; i++)
-    {
-        CollectionFileNames.Add(Path.GetFileName(filePaths[i]));
-    }
+    ViewBag.Title = "CryptWORD";
+    string qwert = WebApplication5.Controllers.HomeController.wordtxt;
+    string qwert_out = WebApplication5.Controllers.HomeController.wordtxt_out;
+    var text = "";
+    Array userData = null;
+    var result = "";
+    int isReady = 0;
+    int IsReadyOut = 0;
+    Array userData_OUT = null;
 
     char[] delimiterChar = { ',' };
 
-    var chooseFile = Server.MapPath("~/Files/decrypt.txt");
-
-    var result = "";
-    int isReady = 0;
-    Array userData1 = null;
-    Array userData_OUT = null;
-    var goodFile = Server.MapPath("~/Files/decrypt_out.txt");
+    var dataFile = Server.MapPath("~/Files/1.docx");
+    var goodFile = Server.MapPath("~/Files/3.docx");
     string crypty = "";
 
-    if (File.Exists(chooseFile))
+    string totaltext = "";
+    string totaltext_OUT = "";
+
+
+    if (File.Exists(dataFile))
     {
-        userData1 = File.ReadAllLines(chooseFile);
-        if (userData1 == null)
-        {
-            // Empty file.
-            result = "Файл загружен, но он пуст.";
-            isReady = 1;
-        }
-        else
-        {
-            result = "Файл готов к дешифровке!";
-            isReady = 2;
-        }
+        isReady = 2;
+        result = "Файл готов к шифрованию!";
     }
     else
     {
         // File does not exist.
         result = "Файла не существует.";
-        isReady = 0;
     }
 
     if (File.Exists(goodFile))
     {
-        userData_OUT = File.ReadAllLines(goodFile);
-        if (userData_OUT == null)
-        {
-            // Empty file.
-            crypty = "Файл пуст.";
-
-        }
-        else
-        {
-        }
+        IsReadyOut = 2;
     }
     else
     {
@@ -65,16 +44,19 @@
 
 }
 
-<h3>Загрузите файл!</h3>
-@using (Html.BeginForm("DeUpload", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+
+<h3>Выберите файл для загрузки</h3>
+
+@using (Html.BeginForm("UploadWORD", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    <input type="file" name="deupload" />
+    <input type="file" name="upload" />
     <br>
     <input type="submit" value="Загрузить" />
 
-
 }
+
 <h4>------------------------------------------------------------------------------------------------------------</h4>
+
 @{
     if (isReady == 2)
     {
@@ -83,15 +65,10 @@
                 <img src="~/Images/ok.PNG" width="38" height="41" /> @result
             </label>
         </h5>
+
+
     }
-    else if (isReady == 1)
-    {
-        <h5>
-            <label>
-                <img src="~/Images/empty.PNG" width="38" height="41" />@result , но он пуст
-            </label>
-        </h5>
-    }
+
     else
     {
         <h5>
@@ -118,22 +95,12 @@
 <body>
     <div>
 
-
         @if (isReady == 2)
         {
             <details>
-                <summary>Текст файла</summary>
+                <summary>Исходный текст:</summary>
                 <div class="box1">
-                    @foreach (string dataLine in userData1)
-                    {
-
-                        foreach (string dataItem in dataLine.Split(delimiterChar))
-                        {
-                            @dataItem
-                        }
-
-
-                    }
+                    @qwert
                 </div>
             </details>
         }
@@ -142,20 +109,24 @@
 </body>
 </html>
 
-@using (Html.BeginForm("Decrypting", "Home", FormMethod.Post))
+@using (Html.BeginForm("EncryptingWORD", "Home", FormMethod.Post))
 {
     if (isReady == 2)
     {
+
         <h4>------------------------------------------------------------------------------------------------------------</h4>
         <h5>Введите ключ:</h5>
         @Html.AntiForgeryToken()
         <div class="form-horizontal">
             <!-- атрибут name такой же как в контроллере у метода параметр -->
-            <input type="text" name="parameterName" id="ls" />
+            <input type="text" name="keyword" id="ls" />
 
         </div>
         <br>
-        <button type="submit" runat="server" id="btnLogin">Расшифровать!</button>
+        <button type="submit" runat="server" id="btnLogin">Зашифровать!</button>
+        //Response.Write("<script>alert('Успешно зашифрован!')</script>");
+
+        <br />
 
         if (crypty == "")
         {
@@ -180,41 +151,40 @@
                     {
                         <h4>------------------------------------------------------------------------------------------------------------</h4>
                         <details>
-                            <summary>Текст в дешифрованном виде: </summary>
+                            <summary>Текст в зашифрованном виде: </summary>
                             <div class="box1">
-                                @foreach (string dataLine in userData_OUT)
-                                {
-
-                                    foreach (string dataItem in dataLine.Split(delimiterChar))
-                                    {
-                                        @dataItem
-                                    }
-
-
-                                }
+                                
+                                @qwert_out
+                                
                             </div>
                         </details>
                     }
 
-                    </div>
-                </body>
-            </html>
+                </div>
+            </body>
+        </html>
 
     }
+
 }
+else
+{
+
 }
 
-@using (Html.BeginForm("DeDownload", "Home"))
+}
+
+@using (Html.BeginForm("Downloadword", "Home"))
 {
-    if (crypty == "" && isReady == 2)
+    if (crypty == "" & isReady == 2)
     {
-        <h4>------------------------------------------------------------------------------------------------------------</h4>
         <h4>Файл забрать ниже ↓</h4>
         <input type="submit" value="Скачать" />
     }
     else
     {
-
+        
     }
+
 }
 
