Конечная, осталось убрать мусор

--- a/WebApplication5/Views/Home/Contact.cshtml
+++ b/WebApplication5/Views/Home/Contact.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    var result = "";
+  /*  var result = "";
     var choosefileName = "";
     Array userData = null;
     Array userData1 = null;
@@ -50,6 +50,7 @@
         result = "The file does not exist.";
     }
 
+    */
 }
 
 
