--- a/WebApplication5/Views/Shared/_Layout.cshtml
+++ b/WebApplication5/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("Зашифровать", "Crypt", "Home")</li>
                     <li>@Html.ActionLink("Дешифровать", "Decrypt", "Home")</li>
                     <li>@Html.ActionLink("Зашифровать WORD", "CryptWORD", "Home")</li>
+                    <li>@Html.ActionLink("Расшифровать WORD", "DecryptWORD", "Home")</li>
                 </ul>
                 </div>
             </div>
